Fix for weird flexbox bug on IE11
See also:
https://github.com/philipwalton/flexbugs#7-flex-basis-doesnt-account-for-box-sizingborder-box

--- a/src/css/answers.less
+++ b/src/css/answers.less
@@ -19,10 +19,10 @@
     color: @df-off-white;
     padding: 8px;
     transition: background-color .1s linear;
-    float: left;
     border-right: 1px solid white;
     border-bottom: 1px solid white;
-    .flex(0 0 50%);
+    .flex(0 0 auto);
+    width: 50%;
     .display-flex;
     .align-items(center);
     .justify-content(center);
